# 12_taxobservatory

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.extract_db  README.md  app.py  deployment.md  pyproject.toml  tax_observatory_extract.sql
.github/workflows/: tests.yaml
.streamlit/: config.toml
app/: PDF visualisation.py  extract_config.yaml  index.py  menu.py  utils.py
app/pages/: 0_Import_File.py  1_Selected_Pages.py  2_Headers.py  2_Merge_Tables.py  2_Metadata.py  3_Clean_Headers.py  3_Merge_Tables.py  3_Tables.py  4_Clean_Headers.py  4_Clean_Tables.py  5_Clean_Tables.py  5_Metadata.py
collecte/: compare_folders_content.py  logger.py  pdf_downloader.py  tools.py
collecte/data/: CbCRs sample links .xlsx  forbes2000.csv  forbes2000_test.csv  orbis_d4g.csv
collecte/test/: test_pdf_downloader.py
collection/: pdf_downloader.py  tests.py  tools.py  websites_finder.py
collection/data/: CbCRs_sample.csv  orbis_d4g_sample.csv  orbis_d4g_sample_sorted.csv
configs/: eval_table_extraction.yaml  test_full_workflow.yaml  v0.yaml
country_by_country/: __init__.py  __main__.py  dash_demo.py  dash_process_methods.py  processor.py  utils.py
country_by_country/database/: db.py
country_by_country/img_table_extraction/: __init__.py  camelot_extractor.py  extract_table_api.py  llama_parse_extractor.py  unstructured.py
country_by_country/models/: decision_tree_model.joblib  random_forest_country_names.pkl  random_forest_keywords.pkl  random_forest_model_high_false_positive.joblib  random_forest_model_low_false_positive.joblib
country_by_country/pagefilter/: __init__.py  copy_as_is.py  (+3 more)
dataviz/: README.md  algo.py  data4good.py  main.py  test.md  utils.py  viz_library.py
dataviz_streamlit_old/: README.md  data4good.py  requirements.txt
dataviz_taipy/: algo.py  main.py  requirements.txt
eval/: README.md  eval_app.py  eval_table_extraction.py  utils.py
evaluation/: extraction.py
media/: extraction_demo_bhp.webm
notebooks/: demo_notebook_pipeline.ipynb  llamaindex_table_extraction.ipynb  llm_test.ipynb  page_filter_randomforest.ipynb  rag_answers.xlsx  rag_kpi_extraction.ipynb  rag_result.txt  table_detection_detectron2.ipynb  table_detection_table_transformer.ipynb  table_detection_yolox.ipynb  table_summaries.xlsx  table_transformer_extraction.ipynb
taxobs/: pyvenv.cfg
test/: test_camelot.py  test_db.py  test_pagefilter.py  test_pdf_downloader.py  test_unstructured.py
(+83 files in other folders)
